Alignment & gradient issue fixed

--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -36,6 +36,13 @@
 				position: relative;
 				overflow: hidden;
 				border-radius: 10px;
+				
+				.overlay{
+					background: linear-gradient(1deg, #2D3748 0%, #090B0E00 100%);
+					height: 158px;
+    				bottom: 0;
+    				top: auto;
+				}
 				img {
 					border-radius: 10px;
 					height: 238px;
@@ -317,6 +324,11 @@
 		&-content {
 			padding: 88px 56px 86px 99px;
 			width: 45%;
+			@media(min-width:992px){
+				display: flex;
+    			flex-direction: column;
+    			justify-content: center;
+			}
 			.title {
 				line-height: 22px !important;
 				a {
@@ -1134,7 +1146,6 @@
 		padding: 0;
 		&-image {
 			width: 55%;
-			float:right;
 			img {
 				height: 498px;
 				width: 100%;
@@ -1144,10 +1155,21 @@
 				}
 			}
 		}
+		.wraper{
+			display: flex;
+
+			@media(max-width:768px){
+				flex-direction: column;
+			}
+		}
 		&-content {
 			width:45%;
-			float:left;
-			padding: 88px 56px 86px 99px;
+			padding: 0px 56px 0px 99px;
+
+			@media(min-width:992px){
+				margin-top: auto;
+				margin-bottom: auto;
+			}
 			.title {
 				line-height: 26px;
 				a {
@@ -1184,7 +1206,7 @@
 	}
 	@media(max-width:768px){
 		&-heading{
-			padding: 33.5px 0 10.5px;
+			padding: 33.5px 0 10.5px !important;
 		}
 		&-section{
 			padding: 0 16px !important;
